test/files/neg/macro-vampire-not-zombie.check
Test_2.scala:3: error: type mismatch;
 found   : AnyRef{macro x: Any; macro y: Any}
 required: AnyRef{def x: Any; def y: Any}
  val bar: { def x: Any; def y: Any } = foo
                                        ^
one error found
